syntax = "proto3";

package greetpb;

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 result = 1;
}

message AvgRequest {
  int32 number = 1;
}

message AvgResponse {
  double result = 1;
}

service CalculatorService{
  rpc Prime(PrimeRequest) returns (stream PrimeResponse) {};
  rpc Avg(stream AvgRequest) returns (AvgResponse) {};
}